<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_margin="15dp"
    android:layout_gravity="center"
    android:id="@+id/linearlayout"
    android:background="@drawable/dialogback"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DialogTitle"
        android:textAllCaps="true"
        android:textColor="@color/greydark"
        android:textAlignment="center"
        android:textSize="24sp"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:weightSum="2"
        android:padding="4dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/delete"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/buttonback"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_margin="1dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open"
            android:id="@+id/open"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_margin="1dp"
            android:textSize="14sp"
            android:background="@drawable/buttonback"
            />
    </LinearLayout>
    <Button
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/buttonback"/>
</androidx.appcompat.widget.LinearLayoutCompat>