<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/splash_home"
    android:visibility="visible"
    android:background="@color/grey"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:id="@+id/text"
        android:text="@string/app_name"
        android:textColor="@color/greydark"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/camera"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/mainbtn1"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:textSize="24sp"
            android:background="@drawable/buttonback"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gallery"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/mainbtn2"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:textSize="24sp"
            android:background="@drawable/buttonback"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mycreation"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/mainbtn3"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:textSize="24sp"
            android:background="@drawable/buttonback"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>