<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainActivity"
    android:background="@color/grey"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/greydark"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/tool"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:id="@+id/backbtn"
            android:background="@drawable/backbtn"
            />
        <TextView
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/header"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:textSize="22sp"
            android:text="@string/app_name"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:id="@+id/donebtn"
            android:background="@drawable/check"/>


    </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="10dp"
    android:id="@+id/image_canvas"
    app:layout_constraintBottom_toTopOf="@id/actionhandler"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tool">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/resizeCanvas">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image"
        android:cropToPadding="true"
        android:src="@drawable/ic_launcher_background"
         />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_image"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:src="@drawable/ic_launcher_foreground"
        />


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/sticker_image"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:src="@color/cardview_dark_background"
        android:visibility="gone"
        />
    <com.example.demoproject.canvas.MyDrawable
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:id="@+id/textDrawable"/>
</RelativeLayout>

</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:id="@+id/actionhandler"
        android:background="@color/greydark">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:id="@+id/recycler"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/frame"
                android:textSize="16sp"
                android:text="@string/actionBtn1"
                android:textColor="@color/white"
                android:background="@color/greydark"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/sticker"
                android:textSize="16sp"
                android:text="@string/actionBtn2"
                android:textColor="@color/white"
                android:background="@color/greydark"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/edit"
                android:textSize="16sp"
                android:text="@string/actionBtn3"
                android:textColor="@color/white"
                android:background="@color/greydark"
                />
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/splash_home"
        />

</androidx.constraintlayout.widget.ConstraintLayout>